adds ref to the AWS Signature Version 4[#154848867]

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -57,7 +57,8 @@ and by using a later version of `cf-deployment`.
     <td><em>n/a</em></td>
   </tr>
   <tr>
-    <td>An external blobstore hosted on Amazon S3 or a compatible storage solution that supports S3 versioning<br>
+    <td>An external blobstore hosted on Amazon S3 or a compatible storage solution that supports S3 versioning
+        and AWS Signature Version 4<br>
         <code>use-s3-blobstore.yml</code>
     </td>
     <td><code>enable-backup-restore-s3.yml</code><br>
