--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -1,14 +1,17 @@
 ---
-title: Enabling an External Blobstore
+title: Backup and Restore with External Blobstores
 owner: BBR
 ---
 
-This topic describes how to enable an external blobstore so that it can be backed up
+This topic describes how to configure an external blobstore so that it can be backed up
 and restored by BOSH Backup and Restore (BBR). 
 
 If your external blobstore is hosted on Amazon S3 or a compatible storage solution that supports S3 versioning
 and AWS Signature Version 4,
 it can be backed up and restored by BBR.
+
+This topic also decribes the different restore scenarios for external blobstores
+and, if necessary, how to prepare the backup artifact for restore.
 
 The backup artifact only contains references to versions of blobs, not the actual files.
 As a consequence, **restores only work if the original bucket still exists**.
@@ -19,10 +22,10 @@ For how to restore from a replica, see [Restore from Replicas](#restore-from-rep
 
 ## <a id="enable-versioning"></a> Enable Versioning on Your External Blobstore
 
-BBR only supports the backup and restore of blobstores stored in versioned, S3-compatible buckets
-that support AWS Signature Version 4.
+BBR only supports the backup and restore of blobstores stored in versioned, Amazon S3 buckets
+and in S3-compatible buckets that are versioned and support AWS Signature Version 4.
 
-To enable versioning of S3 buckets, do the following:
+To enable versioning of Amazon S3 buckets, do the following:
 
 1. Follow the instructions in the Amazon S3 documentation, [How Do I Enable or Suspend Versioning for an S3 Bucket?]
 (https://docs.aws.amazon.com/AmazonS3/latest/user-guide/enable-versioning.html)
@@ -40,24 +43,31 @@ to enable versioning.
  
     This ensures that each file in your buckets has a valid version ID.
 
-**Questions**
-1. What do I do if I have a non-S3 but compatible bucket? Do the Amazon instructions work?<br>
-2. Do we have a sample output from the aws s3 command. 
-
+<p class="note"><strong>Note</strong>: If your blobstore uses S3-compatible buckets not from Amazon, 
+then, see the documentation for that storage provider to enable versioning.</p>
 
 ## <a id="enable-backup-and-restore"></a> Enable Backup and Restore of External Blobstores
 
 To back up a Cloud Foundry deployment that uses an S3-compatible blobstore that supports AWS Signature Version 4,
 do the following:
 
+Step 2 gives the exact ops files method to do the colocation. 
+However, if not ops files, then you need to the co-location in the manner (downloading a manifest)
+that you normally use.
+
 1. Colocate the `s3-versioned-blobstore-backup-restorer` job from the
 [`backup-and-restore-sdk-release`](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master)
 as part of your deployment.
 
+1. Verify that the buckets in the blobstore are one of the followings:
+
+   Amazon S3 versioned as above
+   S3-compatabile versioned and signaure
+ 
 2. If you are using [`cf-deployment`](https://github.com/cloudfoundry/cf-deployment), 
    include the `enable-backup-restore-s3.yml` ops file in your deployment.
 
-    <p class="note"><strong>Note</strong>: Apply <code>enable-backup-restore.yml</code> and <code>use-s3-blobstore.yml</code>
+  <p class="note"><strong>Note</strong>: Apply <code>enable-backup-restore.yml</code> and <code>use-s3-blobstore.yml</code>
        before <code>enable-backup-restore-s3.yml</code>.
        See <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.</p>
 
@@ -84,16 +94,19 @@ If your destination Cloud Foundry for a restore uses different buckets then you 
 those buckets, if the original buckets still exist.
 During restore the original versions are copied from the original buckets to the destination buckets.
 
-The destination buckets must be versioned.
-**Any files in the destination buckets that are not in the
-backup artifact will be deleted.**
+The destination buckets must be versioned. (cross-reference Enable Versioning on Your External Blobstore)
 
 Ensure that the `s3-versioned-blobstore-backup-restorer` job is configured to point to the
 destination buckets, and then run the `bbr` `restore` command.
 
+Ensure that the deployed `s3-versioned-blobstore-backup-restorer` job is configured to point to the
+destination buckets, and then run the `bbr` `restore` command.
+
 ### <a id="restore-from-replicas"></a> Restore from Replicas
 
-To protect yourself from losing your blobstore buckets, you might set up [Cross-Region Replication](https://docs.aws.amazon.com/AmazonS3/latest/dev/crr.html). Replication results in buckets that are identical to the original ones, including their version IDs. This will allow you to perform restores from the replicas, in case your original buckets are lost.
+To protect yourself from losing your blobstore buckets, set up [Cross-Region Replication](https://docs.aws.amazon.com/AmazonS3/latest/dev/crr.html).
+Replication results in buckets that are identical to the original ones, including their version IDs.
+This allowss you to perform restores from the replicas, in case your original buckets are lost.
 
 To do so, you need to modify your backup artifacts to point to the replicas:
 
@@ -101,8 +114,14 @@ To do so, you need to modify your backup artifacts to point to the replicas:
 - extract the blobstore backup archive:
 
 ```
+tar xvf BLOBSTORE-ARTIFACT.tar
+```
+
+For example
+```
 tar xvf backup-restore-0-s3-versioned-blobstore-backup-restorer.tar
 ```
+
 
 - modify the `blobstore.json` to point to the replicated buckets
 - recalculate the shasum of `blobstore.json`
